--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,3 +14,13 @@
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
+
+
+.hide-scrollbar::-webkit-scrollbar {
+display: none;
+}
+
+.hide-scrollbar {
+-ms-overflow-style: none; /* IE and Edge */
+scrollbar-width: none; /* Firefox */
+}
